# RCX-Registry

./: .dockerignore  .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
.agent/execplans/: r3-r4-daemon-publish-and-github-via-daemon.md  rcx-registry-v1-implementation-2026-04-19.md
.github/workflows/: ci.yml
crates/rcx-registry-admin/: Cargo.toml
crates/rcx-registry-admin/src/: lib.rs
crates/rcx-registry-api/: Cargo.toml
crates/rcx-registry-api/src/: lib.rs  published_records.rs
crates/rcx-registry-attest/: Cargo.toml
crates/rcx-registry-attest/src/: lib.rs
crates/rcx-registry-crown/: Cargo.toml
crates/rcx-registry-crown/src/: canonical.rs  error.rs  lib.rs  receipt.rs  tests.rs
crates/rcx-registry-enrich/: Cargo.toml
crates/rcx-registry-enrich/src/: lib.rs
crates/rcx-registry-ingest/: Cargo.toml
crates/rcx-registry-ingest/src/: lib.rs
crates/rcx-registry-server/: Cargo.toml
crates/rcx-registry-server/examples/: rcx-spec-v1-vectors.rs
crates/rcx-registry-server/src/: config.rs  dns.rs  github_oauth.rs  health.rs  lib.rs  main.rs  metrics.rs  server.rs  vault.rs
crates/rcx-registry-server/src/db/: migrations.rs  mirror.rs  mod.rs  publisher_enrichment.rs  publisher_rights.rs  snapshots.rs
crates/rcx-registry-server/src/loops/: enrich.rs  mod.rs  sync.rs
crates/rcx-registry-server/tests/: conformance.rs
crates/rcx-registry-server/tests/support/: conformance_vectors.rs
docs/: README.md  publishing.md
fixtures/examples/: attestation.auditor.invalid.missing-result.json  attestation.auditor.valid.json  rcx-enrichment.invalid.missing-min-tier.json  rcx-enrichment.valid.json
fixtures/session-goldens/: INDEX.txt
fixtures/session-goldens/001-ce-minimal/: meta.json  plan.cbor  plan.json
fixtures/session-goldens/002-ce-full/: meta.json  plan.cbor  plan.json
fixtures/session-goldens/003-hosted-free/: meta.json  plan.cbor  plan.json
fixtures/session-goldens/004-hosted-team/: meta.json  plan.cbor  plan.json
fixtures/session-goldens/005-hosted-pro-parent-chain/: meta.json  plan.cbor  plan.json
fixtures/session-goldens/006-edge-large-uints/: meta.json  plan.cbor  plan.json
fixtures/session-goldens/007-empty-affinities/: meta.json  plan.cbor  plan.json
fixtures/session-goldens/008-unicode-principal/: meta.json  plan.cbor  plan.json
fixtures/session-goldens/009-audit-mode/: meta.json  plan.cbor  plan.json
fixtures/session-goldens/010-intent-shaped/: meta.json  plan.cbor  plan.json
frontdoor/: .gitignore  README.md  content.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  spec-v1-freeze.json  tailwind.config.ts
frontdoor/assets/css/: aurora.css  site.css
frontdoor/components/: DiagramReceiptChain.vue  MonoBlock.vue  SiteFooter.vue  SiteHeader.vue  ThemeToggle.vue
frontdoor/components/content/: ProseA.vue
frontdoor/content/legal/: privacy.md  terms.md
frontdoor/layouts/: default.vue
frontdoor/pages/: badge.vue  index.vue  publish.vue  subregistry.vue  verify.vue
frontdoor/pages/legal/: [slug].vue  index.vue
frontdoor/pages/spec/v1/: [...slug].vue
frontdoor/public/: llms-full.txt  llms.txt  openapi.json  robots.txt  sitemap.xml
frontdoor/public/.well-known/: mcp.json
frontdoor/scripts/: check-spec-freeze.mjs  smoke-built-site.mjs  stage-spec-vectors.mjs
frontdoor/tests/: public-assets.test.mjs
migrations/: 0001_mcp_servers.sql  0002_snapshots.sql  0003_rcx_enrichment.sql  0004_publisher_rights.sql  0006_rcx_enrichment_publisher_meta.sql  README.md
ops/: README.md
ops/caddy/: Caddyfile
ops/docker/: .env.example  Dockerfile  docker-compose.yml
ops/grafana/dashboards/: rcx-registry.json
ops/prometheus/: prometheus.yml
ops/prometheus/rules/: rcx-registry.rules.yml
ops/systemd/: rcx-frontdoor.service
ops/tailscale/: acl-snippet.hujson
schemas/2026-04-19/: attestation.schema.json  rcx-enrichment.schema.json
schemas/2026-05-01/: passport-publish.schema.json  project-publish.schema.json
spec/v1/: 01-conventions.md  02-canonical-cbor.md  03-canonical-json.md  04-hashing.md  05-receipts.md  06-merkle-and-snapshots.md  07-api-and-errors.md  README.md
spec/v1/reimpl/: README.md  REPORT.md  reimpl.py
spec/v1/vectors/: README.md  canonical-cbor.json  canonical-json.json  chains.json  hashes.json  receipts.json  snapshot-merkle.json
