[workspace]
members = [
  "crates/rcx-registry-admin",
  "crates/rcx-registry-api",
  "crates/rcx-registry-attest",
  "crates/rcx-registry-crown",
  "crates/rcx-registry-enrich",
  "crates/rcx-registry-ingest",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CueCrux/RCX-Registry"

[workspace.dependencies]
axum = "=0.8.6"
blake3 = "=1.5.1"
ed25519-dalek = { version = "=2.1.1", features = ["std"] }
half = "=2.4.1"
hex = "=0.4.3"
http = "=1.3.1"
jsonschema = "=0.33.0"
reqwest = { version = "=0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.139", features = ["preserve_order"] }
tokio = { version = "=1.52.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "=0.5.2", features = ["util"] }
thiserror = "=2.0.12"
