[package]
name = "rcx-registry-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Internal onboarding and moderation tools for RCX-Registry."

[dependencies]
hex.workspace = true
rcx-registry-crown = { path = "../rcx-registry-crown" }
serde.workspace = true
thiserror.workspace = true
