[package]
name = "rcx-registry-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP-compatible HTTP surface for RCX-Registry."

[dependencies]
axum.workspace = true
blake3.workspace = true
hex.workspace = true
http.workspace = true
rcx-registry-admin = { path = "../rcx-registry-admin" }
rcx-registry-crown = { path = "../rcx-registry-crown" }
rcx-registry-enrich = { path = "../rcx-registry-enrich" }
rcx-registry-ingest = { path = "../rcx-registry-ingest" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tower.workspace = true
