[package]
name = "rcx-registry-crown"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Canonical CBOR/JSON, BLAKE3 hashing, and receipt types for RCX-Registry."

[dependencies]
blake3.workspace = true
ed25519-dalek.workspace = true
half.workspace = true
hex.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
jsonschema = "0.33.0"
serde_json.workspace = true

