[package]
name = "rcx-registry-enrich"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RCX-Registry enrichment workflows."

[dependencies]
blake3.workspace = true
hex.workspace = true
jsonschema.workspace = true
rcx-registry-crown = { path = "../rcx-registry-crown" }
rcx-registry-ingest = { path = "../rcx-registry-ingest" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
